Fixed right gap

--- a/css/buckets.css
+++ b/css/buckets.css
@@ -8,22 +8,25 @@ body, html {
 	background-color: #DDD;
 	padding: 0.75rem;
 	border-radius: 10px;
-	margin-bottom: 3rem;
 	overflow: hidden;
 }
 
 .large-bucket {
 	float: left;
+	position: relative;
 }
 
 .large-bucket p {
 	width: 100%;
 	padding: 0.75rem 0;
 	font-size: 0.75rem;
-	margin-top: -2.5rem;
 	padding-left: 1rem;
+	bottom: 0;
+	margin:0;
 	color: #fff;
 	position: absolute;
+	background-color: rgba(255,255,255,0.5);
+	font-family: Helvetica, sans-serif;
 }
 
 .side-img {
