--- a/css/common.css
+++ b/css/common.css
@@ -17,6 +17,11 @@ html {
 	text-size-adjust: 100%;
 }
 
+body {
+	overflow-x: hidden;
+	width: 100%;
+}
+
 .ir {
 	overflow: hidden;
 
