--- a/css/forms.css
+++ b/css/forms.css
@@ -1,13 +1,7 @@
 /* Code from http://codepen.io/chrismorata/pen/iDpJF */
 
-.search-field-container { 
-	position: relative; 
-}
-
 .search-field {
 	width: 100%; 
-	right: 0; 
-	top: 0;
   	-webkit-transition: all 0.25s ease-in-out;
   	-moz-transition: all 0.25s ease-in-out;
   	-o-transition: all 0.25s ease-in-out;
@@ -19,6 +13,7 @@
 }
 
 .search-field-container { 
+	position: relative; 
 	display: block; 
 	float: left; 
 	width: 80%; 
@@ -26,14 +21,13 @@
 }
 
 .search-form {
-	max-width: 400px; 
-	margin: 1rem 0 1rem 5%; 
+	margin: 2rem 0 0 5%; 
 }
 
 .search-field { 
 	background-color: #fff; 
 	font-size: 0.85rem; 
-	padding: 0.5rem; 
+	padding: 0.5rem 5rem 0.5rem 1rem; 
 	border: 1px solid #ccc; 
 	outline: none; 
 	-moz-border-radius: 4px; 
