--- a/css/grid.css
+++ b/css/grid.css
@@ -4,9 +4,13 @@
 
 .unit {
 	float: left;
+	margin: 1.5rem 0;
+}
+
+.padding {
+	padding: 1.5rem;
 	background-color: #777;
 	border-radius: 20px;
-	padding: 1.5rem 0;
 }
 
 .unit-s-1 {
